# Alyssa1

./: README.md
Source/AlyssaDataset/: alyssa_dataset.py
Source/AlyssaModel/: alyssa.py  alyssa_attention.py  alyssa_transformer_block.py
Source/AlyssaTokenizer/: alyssa_rapid_tokenizer.pyd  alyssa_tokenizer.py
Source/AlyssaTokenizer/AlyssaRapidTokenizer/: CMakeLists.txt
Source/AlyssaTokenizer/AlyssaRapidTokenizer/Source/: AlyssaRapidTokenizer.cpp  AlyssaRapidTokenizer.h  PythonBindings.cpp
Source/AlyssaTraining/: alyssa_pretrain.py
